# bexy

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  Makefile  README.md  docker-compose.test.yml  pyproject.toml  requirements.txt  run_docker_tests.sh  setup.py  tox.ini
pybox/: api.py  app.py  code_analyzer.py  dependency_manager.py  examples.py  logging_config.py  pybox_run.py  python_sandbox.py  sandbox_manager.py  setup.py  utils.py
tests/: test_code_analyzer.py  test_dependency_manager.py  test_examples.py  test_python_sandbox.py  test_sandbox_manager.py  test_utils.py
