[tool.poetry]
name = "pybox"
version = "0.1.0"
description = ""
authors = ["Tom Sapletta <info@softreck.dev>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
