[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bexy"
version = "0.1.23"
description = "A sandbox for safely running Python code"
authors = ["Tom Sapletta <info@softreck.dev>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/py-lama/bexy"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security"
]

[project.urls]
Homepage = "https://github.com/py-lama/bexy"
Documentation = "https://py-lama.github.io/bexy/"
Repository = "https://github.com/py-lama/bexy"
Changelog = "https://github.com/py-lama/bexy/blob/main/CHANGELOG.md"
Tracker = "https://github.com/py-lama/bexy/issues"
Download = "https://pypi.org/project/bexy/"
[[tool.poetry.packages]]
include = "bexy"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.dev-dependencies]
